--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "scripts": {
     "dev": "export PORT=3006 && react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
